--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#992d37",
   "icons": [
     {
-      "src": "/app_icon.png",
+      "src": "./app_icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/app_icon.png",
+      "src": "./app_icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
