--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "365 Days of Love",
-  "short_name": "365 Love",
+  "short_name": "365 Songs",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffcbd5",
